<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuzzy Logic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty"></string>
    <string name="logo_description">Fuzzy Logic Logo</string>
    <string name="title_activity_scan">Quick Scan</string>
    <string name="scan_message">Hold a block against the back of your device to scan it.</string>
    <string name="title_activity_sessions">Session History</string>
    <string name="title_activity_session_detail">Session Detail</string>
    <string name="session_date">Date</string>
    <string name="session_length">Session Length</string>
    <string name="lesson">Lesson Name</string>
    <string name="summary">Summary</string>
    <string name="questions">Questions</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_blocks">Manage Blocks</string>
    <string name="title_activity_block_set_detail">Block Set Detail</string>
    <string name="remap_blocksets">Edit</string>
    <string name="title_activity_block_sets">Block Sets</string>
    <string name="title_activity_remapping">Edit Block Set</string>
    <string name="title_activity_edit_block_set">Edit Block Set</string>
    <string name="remap_message">Remap block to</string>
    <string name="save">Save Mapping</string>
    <string name="title_activity_lessons">My Lessons</string>
    <string name="title_section1">My Lessons</string>
    <string name="title_section2">Browse</string>
    <string name="title_section3">Search</string>
    <string name="search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_browse">Browse</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Lessons</string>
    <string name="title_activity_browse">Browse Lessons</string>
    <string name="action_mylessons">My Lessons</string>
    <string name="delete_title">Delete</string>
    <string name="search_app_name">Fuzzy Logic Search</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_activity_lesson_detail">Lesson Detail</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="unmapped">[unmapped]</string>
    <string name="service_name">Learning Service</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="warning">Warning</string>
    <string name="delete_lesson_message">Are you sure you would like to delete this lesson? This will also delete any sessions associated with it.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="download">Download</string>
    <string name="title_activity_category_detail">Category</string>
    <string name="lesson_enabled_message">Cannot delete the active lesson.</string>
    <string name="ok">OK</string>
    <string name="delete_session_message">Are you sure you would like to delete this session? This cannot be undone.</string>
    

</resources>
