<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScanActivity" >

    <TextView
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/scan_message"
        android:textSize="20sp" />
    


    <RelativeLayout
        android:id="@+id/nfc_edit_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message" >

        <TextView
        android:id="@+id/msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="Scan the block for"
        android:textSize="20sp" />
             
        <TextView
            android:id="@+id/message_map_target"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/msg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="A"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/message_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/message_map_target"
            android:text="Block Tag Value"
            android:layout_marginBottom="10dp"
            android:textSize="20sp" />
        
        <EditText
            android:id="@+id/block_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message_id"
            android:ems="10" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/block_id"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:onClick="saveMapping"
            android:text="@string/save" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nfc_scan_layout"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:visibility="gone" >
  
    <TextView
        android:id="@+id/result_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_alignParentTop="true"   
        android:text="@string/empty"
        android:textSize="60sp" />
    
     <TextView
        android:id="@+id/result_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/result_value"
        android:layout_alignParentLeft="true"      
        android:text="@string/empty"
        android:textSize="40sp" />
    
        
    </RelativeLayout>

</RelativeLayout>